--- a/Miniprosjekt1/Miniprosjekt1.ipynb
+++ b/Miniprosjekt1/Miniprosjekt1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_to_float(value):\n",
-    "    try:\n",
-    "        return float(value.replace(',', '.'))\n",
-    "    except ValueError:\n",
-    "        return np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 172,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#Data hentet fra seklima.met.no\n",
+    "\n",
     "df = pd.read_csv('TrdVoll.csv', usecols=[3, 4, 5, 6], skiprows=1, delimiter=';')\n",
     "\n",
     "df.columns = ['MidTemp', 'MaxTemp', 'MinTemp', 'Nedbør']\n",
@@ -53,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skaug\\AppData\\Local\\Temp\\ipykernel_16104\\525662786.py:47: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\skaug\\AppData\\Local\\Temp\\ipykernel_8232\\525662786.py:47: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
