--- a/Miniprosjekt2/Miniprosjekt2-2.ipynb
+++ b/Miniprosjekt2/Miniprosjekt2-2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bibliotek"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 280,
    "metadata": {},
@@ -11,6 +18,13 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.cm as cm\n",
     "import matplotlib.colors as mcolors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funksjoner"
    ]
   },
   {
@@ -58,6 +72,13 @@
     "    base = plt.get_cmap(base_cmap)\n",
     "    colors = base(np.linspace(start, stop, n_colors))\n",
     "    return mcolors.LinearSegmentedColormap.from_list(f'{base_cmap}_custom', colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataanalyse"
    ]
   },
   {
@@ -220,7 +241,7 @@
     "ax4.legend(loc='lower left')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()  "
+    "plt.show()"
    ]
   }
  ],
